优化实现